--- a/client/src/pages/styles/quizz.css
+++ b/client/src/pages/styles/quizz.css
@@ -53,6 +53,9 @@
 
 /** Les cases **/
 .case {
+  display: flex;
+  justify-content: center;
+  margin-left: 2rem;
   height: 70px;
   width: 80px;
   border: 15rem solid var(--primary-color);
@@ -63,6 +66,11 @@
   height: 70px;
   width: 80px;
   size: 5rem;
+}
+
+.quizz-label {
+  display: flex;
+  justify-content: center;
 }
 
 .submit-quizz {
