--- a/client/src/pages/styles/register.css
+++ b/client/src/pages/styles/register.css
@@ -49,7 +49,8 @@ label {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 10rem;
+  box-sizing: border-box;
+  padding: 2rem;
 }
 
 .connexionbutton {
