--- a/client/src/components/styles/footer.css
+++ b/client/src/components/styles/footer.css
@@ -1,5 +1,27 @@
 .footer {
-  display: flex;
-  justify-content: center;
-  background-color: orange;
+  text-align: center;
+  background-color: #f1f1f1;
+}
+
+.footer-link {
+  display: inline-block;
+}
+
+.github-logo {
+  width: 40px;
+  transition: transform 0.3s ease;
+}
+
+.github-logo:hover {
+  transform: scale(4);
+}
+
+.made {
+  font-size: 15px;
+  padding-top: 15px;
+}
+
+.projettext {
+  font-size: 10px;
+  font-weight: bold;
 }
