--- a/client/src/components/styles/header.css
+++ b/client/src/components/styles/header.css
@@ -68,3 +68,20 @@ a {
   display: flex;
   width: 130px;
 }
+
+@media screen and (max-width: 762px) {
+  .logo {
+    display: none;
+  }
+
+  .nav-bar {
+    width: 25rem;
+  }
+
+  .nav-ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+  }
+}
