--- a/client/src/pages/styles/home.css
+++ b/client/src/pages/styles/home.css
@@ -33,23 +33,24 @@
     -1px 1px 0 #000,
     1px 1px 0 #000;
   font-family: "Shadows Into Light", cursive;
+  background-color: rgba(128, 128, 128, 0.5);
+  width: 80rem;
+  height: 50rem;
+  border-radius: 15px;
 }
 
 .buttons {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: var(--color-6);
 }
 
 .button-quizz {
-  background-color: var(--color-5);
   font-size: 7rem;
   border-radius: 5%;
 }
 
 .button-all {
-  background-color: var(--color-5);
   font-size: 5rem;
   border-radius: 5%;
 }
@@ -61,8 +62,9 @@
 }
 
 .imgparachute {
-  width: 50rem;
+  width: 80rem;
   height: 50rem;
+  border-radius: 15px;
 }
 
 .homecontainer {
@@ -72,14 +74,8 @@
   justify-content: center;
   position: relative;
   width: 100%;
-  padding-top: 10rem;
+  padding-top: 2rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.all-buttons {
-  background-color: white;
-  width: 20rem;
-  height: 50rem;
 }
 
 .text-quizz {
@@ -88,7 +84,6 @@
 }
 .accueiltitle {
   display: flex;
-  align-items: center;
   justify-content: center;
 }
 
@@ -99,8 +94,9 @@
 .carousel-dots {
   position: absolute;
   bottom: 10px;
-  left: 40%;
+  left: 50%;
   transform: translateX(-50%);
+  z-index: 1;
 }
 
 .dot {
@@ -126,4 +122,39 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.all-buttons {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+  padding: 0;
+  margin: 2rem 0 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  z-index: 1;
+}
+
+.all-buttons li {
+  margin: 10px 0;
+}
+
+.buttons,
+.text-quizz {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: rgba(255, 255, 255, 0.7);
+  color: #000;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.buttons:hover,
+.text-quizz:hover {
+  background-color: rgba(255, 255, 255, 0.9);
 }
