--- a/client/src/components/styles/activitycard.css
+++ b/client/src/components/styles/activitycard.css
@@ -24,7 +24,7 @@
 }
 
 .card__header {
-  height: 50%;
+  height: 200px;
 }
 
 .card__image {
@@ -57,6 +57,10 @@ h4 {
 .text {
   font-family: var(--secondary-font);
   font-size: 1rem;
+}
+
+h4 {
+  color: #01c794;
 }
 
 h5 {
