--- a/client/src/components/styles/activitycard.css
+++ b/client/src/components/styles/activitycard.css
@@ -47,7 +47,7 @@
 }
 
 h4 {
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   font-family: var(--primary-font);
   color: var(--color-5);
   font-weight: 700;
@@ -59,14 +59,10 @@ h4 {
   font-size: 1rem;
 }
 
-h4 {
-  color: #01c794;
-}
-
-h5 {
-  font-family: var(--primary-font);
+.h5 {
+  font-family: var(--secondary-font);
   font-size: 1rem;
-  color: #d9971a;
+  color: var(--color-4);
 }
 
 .card__flex__activity {
@@ -113,7 +109,4 @@ h5 {
   background-color: #b87a16;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border: 1px solid black;
-}
-
-@media screen and (min-width: 762px) {
 }
