--- a/client/src/components/styles/activitycard.css
+++ b/client/src/components/styles/activitycard.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Figtree:ital,wght@0,300..900;1,300..900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Freeman&display=swap");
 :root {
   --primary-font: "Bebas Neue", sans-serif;
   --secondary-font: "Figtree", sans-serif;
@@ -20,7 +20,6 @@
   box-shadow: 0 0.1rem 1rem rgba(0, 0, 0, 0.5);
   border-radius: 1rem;
   background: white;
-  cursor: pointer;
 }
 
 .card__header {
@@ -33,7 +32,6 @@
   display: block;
   object-fit: cover;
   transition: transform 0.3s ease-in-out;
-  cursor: pointer;
 }
 
 .card__body {
@@ -57,12 +55,14 @@ h4 {
 .text {
   font-family: var(--secondary-font);
   font-size: 1rem;
+  font-family: "Freeman", sans-serif;
 }
 
 .h5 {
   font-family: var(--secondary-font);
   font-size: 1rem;
   color: var(--color-4);
+  font-family: "Freeman", sans-serif;
 }
 
 .card__flex__activity {
@@ -72,10 +72,14 @@ h4 {
   box-sizing: border-box;
   padding: 1rem 0;
   font-family: var(--secondary-font);
+  font-family: "Freeman", sans-serif;
 }
 
 .card__image__activity {
   height: 50px;
+  width: 50px;
+  object-fit: cover;
+  border-radius: 10px;
 }
 
 .card__carroussel__activity {
@@ -93,7 +97,7 @@ h4 {
 }
 
 .button__showmore {
-  width: 15rem;
+  width: 13rem;
   height: 2rem;
   font-size: 15px;
   color: white;
@@ -102,6 +106,11 @@ h4 {
   border: 0px;
   cursor: pointer;
   border-radius: 14px;
+}
+
+.button__showmore:hover {
+  background-color: #9e6d12;
+  transform: scale(1.05);
 }
 
 .button__showmore {
