--- a/client/src/components/styles/activitylist.css
+++ b/client/src/components/styles/activitylist.css
@@ -19,14 +19,14 @@ h1 {
 .activitylist-section {
   box-sizing: border-box;
   padding: 1rem 2rem;
-}
-
-.activitylist-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
-  box-sizing: border-box;
+  gap: 5px;
+}
+
+.activitylist-container {
+  align-items: center;
   padding: 1rem;
 }
 
@@ -37,7 +37,6 @@ h1 {
 @media screen and (min-width: 762px) {
   .activitylist-section {
     width: 100vw;
-    height: 92vh;
     background-color: var(--color-2);
     box-sizing: border-box;
     padding: 2rem 10rem;
@@ -46,7 +45,7 @@ h1 {
   .activitylist-container {
     display: flex;
     flex-direction: row;
-    gap: 2rem;
+    gap: 1rem;
     box-sizing: border-box;
   }
 }
