--- a/client/src/pages/styles/login.css
+++ b/client/src/pages/styles/login.css
@@ -2,7 +2,6 @@
 
 .background {
   background-image: url("../../../src/assets/images/fondlogin.jpg");
-  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   height: 100vh;
@@ -49,7 +48,7 @@ label {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 2rem;
+  margin: 2rem 0;
 }
 
 .connexionbutton {
